--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
     <!-- <link rel="stylesheet" href="index.css">
-    <script type="module" src="./src/newscript.js"></script>
+    <script type="module" src="./src/index.js"></script>
     <script src="./node_modules/jwt-decode/build/jwt-decode.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script> -->
